// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumb > renders with item slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="">
  <ol data-slot="list" class="">
    <li data-slot="item" class=""><a href="/" data-slot="link">Item slot</a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="separatorIcon" class=""></svg></li>
    <li data-slot="item" class=""><span data-slot="link">Item slot</span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="separatorIcon" class=""></svg></li>
    <li data-slot="item" class=""><a href="/components/breadcrumb" data-slot="link"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLeadingIcon" class=""></svg><span data-slot="linkLabel" class="">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;

exports[`Breadcrumb > renders with item-leading slot correctly 1`] = `
"<nav aria-label="breadcrumb" data-slot="root" class="">
  <ol data-slot="list" class="">
    <li data-slot="item" class=""><a href="/" data-slot="link">Item leading slot<span data-slot="linkLabel" class="">Home</span></a></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="separatorIcon" class=""></svg></li>
    <li data-slot="item" class=""><span data-slot="link">Item leading slot<span data-slot="linkLabel" class="">Components</span></span></li>
    <li role="presentation" aria-hidden="true" data-slot="separator" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="separatorIcon" class=""></svg></li>
    <li data-slot="item" class=""><a href="/components/breadcrumb" data-slot="link"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="linkLeadingIcon" class=""></svg><span data-slot="linkLabel" class="">Breadcrumb</span></a></li>
    <!--v-if-->
  </ol>
</nav>"
`;
